--- a/index.html
+++ b/index.html
@@ -418,11 +418,11 @@
         <h2>Contact Me</h2>
     </div>
 
-    <form action="#" class="scroll-bottom">
-        <input type="text" placeholder="Your Name">
-        <input type="text" placeholder="Your Email">
-        <input type="text" placeholder="Your Address">
-        <input type="number" placeholder="Phone Number">
+    <form action="https://formsubmit.co/chathurangiw98@gmail.com" method="POST" class="scroll-bottom">
+        <input type="text" name="name" required placeholder="Your Name">
+        <input type="text" name="your email" required placeholder="Your Email">
+        <input type="text"name="your address" required placeholder="Your Address">
+        <input type="number"name="phone numbe" required placeholder="Phone Number">
         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
         <div class="btn-box formBtn">
             <button type="submit" class="btn">Send Message</button>
