--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     <div class="port-content">
                         <h4>Hardware Stock System</h4>
                         <p>This application uses C#,PL/SQL,Power BI for dynamic and interactive functionality.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="https://github.com/Chathurangiw/Hardware_Stock_System-master"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
 
